project 14 en done

--- a/_data/projects/en.yml
+++ b/_data/projects/en.yml
@@ -610,12 +610,12 @@
       id: 'nightlife'
     - name: 'stakeholder'
       id: 'stakeholder'
-    - name: 'noise_pollution'
-      id: 'noise pollution'
-    - name: 'night_noise'
-      id: 'night noise'
-    - name: 'public_policy'
-      id: 'public policy,'
+    - name: 'noise pollution'
+      id: 'noise_pollution'
+    - name: 'night noise'
+      id: 'night_noise'
+    - name: 'public policy'
+      id: 'public_policy,'
     - name: 'sonic cohabitation'
       id: 'sonic_cohabitation'
     - name: 'Quartier des Spectacles'
